[gd_scene load_steps=11 format=2]

[ext_resource path="res://background/space_background.png" type="Texture" id=1]
[ext_resource path="res://fonts/Orbitron-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gui/play_button_h.png" type="Texture" id=3]
[ext_resource path="res://gui/play_button.png" type="Texture" id=4]
[ext_resource path="res://audio/The Rubberband Man (2003 Remaster).ogg" type="AudioStream" id=5]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 126
outline_size = 7
outline_color = Color( 0.733333, 0.0235294, 0.0235294, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "change_colors"
length = 6.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_fonts/font:outline_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.733333, 0.0235294, 0.0235294, 1 ), Color( 0.733333, 0.639216, 0.0235294, 1 ), Color( 0.0784314, 0.733333, 0.0235294, 1 ), Color( 0.0235294, 0.733333, 0.6, 1 ), Color( 0.0235294, 0.152941, 0.733333, 1 ), Color( 0.733333, 0.0235294, 0.705882, 1 ), Color( 0.733333, 0.0235294, 0.0901961, 1 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 67.2717, 67.2717, 67.2717, 67.2717, 67.2717, 67.2717, 67.2717, 67.2717, 67.2717, 67.2717, 67.2717 ),
"update": 1,
"values": [ 50, 55, 60, 65, 70, 75, 70, 65, 60, 55, 50 ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGroundSprite" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="TitleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -531.12
margin_right = 531.12
margin_bottom = 251.0
custom_fonts/font = SubResource( 1 )
text = "rock breaker"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleLabel"]
autoplay = "change_colors"
anims/change_colors = SubResource( 2 )

[node name="PlayTextureButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.5
margin_top = -33.5
margin_right = 124.5
margin_bottom = 33.5
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameplayAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
autoplay = true

[node name="HighScoreLabel" type="Label" parent="."]
anchor_left = 0.512
anchor_top = 0.852
anchor_right = 0.512
anchor_bottom = 0.852
margin_left = -240.04
margin_top = -120.16
margin_right = 185.96
margin_bottom = -44.1599
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 1, 0 )
custom_fonts/font = SubResource( 3 )
text = "high score: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HighScoreLabel"]
autoplay = "idle"
anims/idle = SubResource( 4 )
[connection signal="pressed" from="PlayTextureButton" to="." method="_on_TextureButton_pressed"]
